create github pages

--- a/page1.html
+++ b/page1.html
@@ -11,10 +11,10 @@
   <title>Page 1</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/gdpr-plugin/gdpr-styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="header10 cid-qGxm0DzdBe mbr-fullscreen mbr-parallax-background" id="header10-k">
+<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="header10 cid-qGxm0DzdBe mbr-fullscreen mbr-parallax-background" id="header10-k">
 
     
 
@@ -229,7 +229,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fyVMcErrHvEXZzyyuofqvjFRPB9neG7kh4FI4rMuia0gNNH2UqklyqY2/k3L66bX/Zg8RNPICvZ/24WR8d3r8ACGqBM5EaNeO62KKm2KK0QxIDcgYH14/uNeqXUN00X9">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pB1SSqiRXUMOILmDE/4cubO2IvKnmrXagtr/3fQQoiTPudK3u3kO7PaBVRRDrlffkJNfO4DWf0xXI6bNjhfrRCA4Oklx0O/O0AWSJju+/1MlotDCuktA+46sPeAdtd4s">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
