create github pages

--- a/page1.html
+++ b/page1.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="header10 cid-qGxm0DzdBe mbr-fullscreen mbr-parallax-background" id="header10-k">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="header10 cid-qGxm0DzdBe mbr-fullscreen mbr-parallax-background" id="header10-k">
 
     
 
@@ -229,7 +229,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pB1SSqiRXUMOILmDE/4cubO2IvKnmrXagtr/3fQQoiTPudK3u3kO7PaBVRRDrlffkJNfO4DWf0xXI6bNjhfrRCA4Oklx0O/O0AWSJju+/1MlotDCuktA+46sPeAdtd4s">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="T4s4f39LN4QFOX02345Zm5FKya4jsYoEYyRl9FzX7ACIOwrosn4LRY/bNo4YGTxSGGgZ2/plkLS0Pj31p5+j11tSYUXagnpGxmA9+3lBlk0eoDbEjbDsld1+JLoOehPD">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
