create github pages

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="header10 cid-rjzICgiWZS mbr-fullscreen mbr-parallax-background" id="header10-3">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="header10 cid-rjzICgiWZS mbr-fullscreen mbr-parallax-background" id="header10-3">
 
     
 
@@ -87,7 +87,7 @@
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
                 <h2 class="align-center mbr-bold mbr-white pb-3 mbr-fonts-style display-2">27 FEVRIER 2019<br></h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-white pb-3 mbr-fonts-style display-5">Introduction à inernet<br>Création d'un site Web<div><br></div><br><br><a href="assets/files/Cours-Complet-Apprenez-%C3%A0-Coder-en-HTML-CSS.pdf" class="text-success">Théorie</a>&nbsp;<br><a href="http://techno-flash.com/animations/reseau_college/reseau_college.swf" class="text-success">Ressources</a><br><div><a href="assets/files/Reseau%20informatique.pdf">
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-white pb-3 mbr-fonts-style display-5">Introduction à inernet<br>Création d'un site Web<div><br></div><br><br><a href="assets/files/Cours-Complet-Apprenez-%C3%A0-Coder-en-HTML-CSS.pdf" class="text-success">Théorie</a>&nbsp;<br><a href="assets/files/Cours-Complet-Apprenez-%C3%A0-Coder-en-HTML-CSS.pdf" class="text-success">Ressources</a><br><div><a href="assets/files/Reseau%20informatique.pdf">
 </a></div><div><a href="assets/files/Reseau%20informatique.pdf">
 </a></div><div><a href="assets/files/R%C3%A9seaux%20informatiques.docx" class="text-success">Evaluation</a><br><br>&nbsp;</div></h3>
                 
